<resources>
    <string name="app_name">iMax C</string>


    <string name="preference_file">PREFERENCE_FILE_KEY</string>
    <string name="preference_user">USER_TYPE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_fragment_label">Order Fragment</string>
    <string name="pending_fragment_label">Pending Fragment</string>
    <string name="ganancia_driver">Ganancia: S/ %s</string>
    <string name="priceCobrar">Cobrar S/ %s</string>

    <string name="attentions">Mis Atenciones</string>
    <string name="service_debts">Deudas Pendientes</string>
    <string name="profit">Mi Ganancia</string>
    <string name="btn_payment">PAGAR</string>
    <string name="btn_cargo">NO PAGAR</string>
    <string name="assigned">Asignar Envíos</string>
    <string name="debts_helper">Cobranza acopiadores</string>

</resources>